--- a/package.json
+++ b/package.json
@@ -17,8 +17,16 @@
   },
   "homepage": "https://github.com/v-yan-v/entrance-task-2-2#readme",
   "devDependencies": {
+    "browser-sync": "^2.24.7",
     "cssnano": "^4.0.4",
+    "del": "^3.0.0",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
     "node-sass": "^4.9.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "debug": "^3.1.0"
+  }
 }
