--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Задание 2 - Верстка страницы управления умным домом - для Яндекс.ШРИ-осень-2018",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "buildDev": "webpack --mode development",
+    "buildProd": "webpack --mode production",
+    "serv": "webpack-dev-server --mode development --open"
   },
   "repository": {
     "type": "git",
@@ -17,14 +20,28 @@
   },
   "homepage": "https://github.com/v-yan-v/entrance-task-2-2#readme",
   "devDependencies": {
-    "browser-sync": "^2.24.7",
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.2.0",
+    "babel-loader": "^8.0.4",
+    "browser-sync": "^2.26.3",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.0.1",
     "cssnano": "^4.0.4",
     "del": "^3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
-    "node-sass": "^4.10.0"
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "debug": "^3.1.0"
