--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "buildDev": "webpack --mode development",
-    "buildProd": "webpack --mode production",
+    "buildDev": "webpack-cli --color --progress --mode development",
+    "buildProd": "webpack-cli --color --progress --mode production",
     "serv": "webpack-dev-server --mode development --open"
   },
   "repository": {
